[project]
name = "comfyui-vectorscope-cc"
description = "ComfyUI port of a wonderful extension [a/SD Webui Vectorscope CC by Haoming02](https://github.com/Haoming02/sd-webui-vectorscope-cc).\nBased on (and probably incompatible with) [a/ComfyUI Diffusion Color Grading by Haoming02](https://github.com/Haoming02/comfyui-diffusion-cg)."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/pamparamm/ComfyUI-vectorscope-cc"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-vectorscope-cc"
Icon = ""
