[project]
name = "comfyui-vectorscope-cc"
description = "ComfyUI port of Vectorscope CC extension by Haoming02. Makes it possible to adjust Brightness/Contrast/Saturation/Hue during image generation."
version = "1.0.0"
license = "MIT"

[project.urls]
Repository = "https://github.com/pamparamm/ComfyUI-vectorscope-cc"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "pamparamm"
DisplayName = "ComfyUI-vectorscope-cc"
Icon = ""
